src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__assigning_string_literal_to_int_variable_results_in_casting_error.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E074]: Cannot generate String-Literal for type INT
  ┌─ <internal>:6:14
  │
6 │         x := 'A';
  │              ^^^ Cannot generate String-Literal for type INT


